Added code by Adil and Zulfi - only fixed point iteration remanis

--- a/Codes By Adil/Readme
+++ b/Codes By Adil/Readme
@@ -1,1 +1,1 @@
-This folder contains codes written for Bisection, Fixed Point, Regular Falsi, Newtons Forward Formula
+This folder contains codes written for Bisection, Fixed Point, Regular Falsi
